tried to find overflow bug - unsiccessful

--- a/css/styles.css
+++ b/css/styles.css
@@ -444,10 +444,12 @@ textarea[placeholder] {
 }
 
 .widget_container_full {
+  max-width: 1200px;
   position: relative;
   height: 20vh;
 }
 .widget_container_half {
+  /*max-width: 1200px;*/
   position: relative;
   height: 20vh;
 }
@@ -542,7 +544,6 @@ main {
   .alert {
     grid-column: 1 / 3;
   }
-  
   .widget_container_full {
     position: relative;
     width: 90vw;
